# rivet-hi

./: ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  rivet.pc  rivet.pc.in  rivetenv.csh.in  rivetenv.sh.in
analyses/: Makefile.am  Makefile.in
analyses/pluginALICE/: ALICE_2010_I880049.cc  ALICE_2010_I880049.plot  ALICE_2010_I880049.yoda  ALICE_2010_S8624100.cc  ALICE_2010_S8624100.info  ALICE_2010_S8624100.plot  ALICE_2010_S8624100.yoda  ALICE_2010_S8625980.cc  ALICE_2010_S8625980.info  ALICE_2010_S8625980.plot  ALICE_2010_S8625980.yoda  ALICE_2010_S8706239.cc  ALICE_2010_S8706239.info  ALICE_2010_S8706239.plot  ALICE_2010_S8706239.yoda  ALICE_2011_S8909580.cc  ALICE_2011_S8909580.info  ALICE_2011_S8909580.plot  ALICE_2011_S8909580.yoda  ALICE_2011_S8945144.cc  ALICE_2011_S8945144.info  ALICE_2011_S8945144.plot  ALICE_2011_S8945144.yoda  ALICE_2012_I1116147.cc  ALICE_2012_I1116147.info  ALICE_2012_I1116147.plot  ALICE_2012_I1116147.yoda  ALICE_2012_I1127497.cc  ALICE_2012_I1127497.plot  ALICE_2012_I1127497.yoda  ALICE_2012_I1181770.cc  ALICE_2012_I1181770.info  ALICE_2012_I1181770.plot  ALICE_2012_I1181770.yoda  ALICE_2012_I930312.cc  ALICE_2012_I930312.plot  ALICE_2012_I930312.yoda  ALICE_2014_I1300380.cc  ALICE_2014_I1300380.info  ALICE_2014_I1300380.plot  (+11 more)
analyses/pluginATLAS/: ATLAS_2010_CONF_2010_049.cc  ATLAS_2010_CONF_2010_049.info  ATLAS_2010_CONF_2010_049.plot  ATLAS_2010_CONF_2010_049.yoda  ATLAS_2010_S8591806.cc  ATLAS_2010_S8591806.info  ATLAS_2010_S8591806.plot  ATLAS_2010_S8591806.yoda  ATLAS_2010_S8817804.cc  ATLAS_2010_S8817804.info  ATLAS_2010_S8817804.plot  ATLAS_2010_S8817804.yoda  ATLAS_2010_S8894728.cc  ATLAS_2010_S8894728.info  ATLAS_2010_S8894728.plot  ATLAS_2010_S8894728.yoda  ATLAS_2010_S8914702.cc  ATLAS_2010_S8914702.info  ATLAS_2010_S8914702.plot  ATLAS_2010_S8914702.yoda  ATLAS_2010_S8918562.cc  ATLAS_2010_S8918562.info  ATLAS_2010_S8918562.plot  ATLAS_2010_S8918562.yoda  ATLAS_2010_S8919674.cc  ATLAS_2010_S8919674.info  ATLAS_2010_S8919674.plot  ATLAS_2010_S8919674.yoda  ATLAS_2011_CONF_2011_090.cc  ATLAS_2011_CONF_2011_090.info  ATLAS_2011_CONF_2011_090.plot  ATLAS_2011_CONF_2011_098.cc  ATLAS_2011_CONF_2011_098.info  ATLAS_2011_CONF_2011_098.plot  ATLAS_2011_I894867.cc  ATLAS_2011_I894867.info  ATLAS_2011_I894867.plot  ATLAS_2011_I894867.yoda  ATLAS_2011_I919017.cc  ATLAS_2011_I919017.info  (+625 more)
analyses/pluginCDF/: CDF_1988_S1865951.cc  CDF_1988_S1865951.info  CDF_1988_S1865951.plot  CDF_1988_S1865951.yoda  CDF_1990_S2089246.cc  CDF_1990_S2089246.info  CDF_1990_S2089246.plot  CDF_1990_S2089246.yoda  CDF_1993_S2742446.cc  CDF_1993_S2742446.info  CDF_1993_S2742446.plot  CDF_1993_S2742446.yoda  CDF_1994_S2952106.cc  CDF_1994_S2952106.info  CDF_1994_S2952106.plot  CDF_1994_S2952106.yoda  CDF_1996_S3108457.cc  CDF_1996_S3108457.info  CDF_1996_S3108457.plot  CDF_1996_S3108457.yoda  CDF_1996_S3349578.cc  CDF_1996_S3349578.info  CDF_1996_S3349578.plot  CDF_1996_S3349578.yoda  CDF_1996_S3418421.cc  CDF_1996_S3418421.info  CDF_1996_S3418421.plot  CDF_1996_S3418421.yoda  CDF_1997_S3541940.cc  CDF_1997_S3541940.info  CDF_1997_S3541940.plot  CDF_1997_S3541940.yoda  CDF_1998_S3618439.cc  CDF_1998_S3618439.info  CDF_1998_S3618439.plot  CDF_1998_S3618439.yoda  CDF_2000_S4155203.cc  CDF_2000_S4155203.info  CDF_2000_S4155203.plot  CDF_2000_S4155203.yoda  (+104 more)
analyses/pluginCMS/: CMS_2010_PAS_QCD_10_024.cc  CMS_2010_PAS_QCD_10_024.info  CMS_2010_PAS_QCD_10_024.plot  CMS_2010_PAS_QCD_10_024.yoda  CMS_2010_S8547297.cc  CMS_2010_S8547297.info  CMS_2010_S8547297.plot  CMS_2010_S8547297.yoda  CMS_2010_S8656010.cc  CMS_2010_S8656010.info  CMS_2010_S8656010.plot  CMS_2010_S8656010.yoda  CMS_2011_I954992.cc  CMS_2011_I954992.info  CMS_2011_I954992.plot  CMS_2011_I954992.yoda  CMS_2011_S8884919.cc  CMS_2011_S8884919.info  CMS_2011_S8884919.plot  CMS_2011_S8884919.yoda  CMS_2011_S8941262.cc  CMS_2011_S8941262.info  CMS_2011_S8941262.plot  CMS_2011_S8941262.yoda  CMS_2011_S8950903.cc  CMS_2011_S8950903.info  CMS_2011_S8950903.plot  CMS_2011_S8950903.yoda  CMS_2011_S8957746.cc  CMS_2011_S8957746.info  CMS_2011_S8957746.plot  CMS_2011_S8957746.yoda  CMS_2011_S8968497.cc  CMS_2011_S8968497.info  CMS_2011_S8968497.plot  CMS_2011_S8968497.yoda  CMS_2011_S8973270.cc  CMS_2011_S8973270.info  CMS_2011_S8973270.plot  CMS_2011_S8973270.yoda  (+226 more)
analyses/pluginD0/: D0_1995_I398175.cc  D0_1995_I398175.info  D0_1995_I398175.plot  D0_1995_I398175.yoda  D0_1996_S3214044.cc  D0_1996_S3214044.info  D0_1996_S3214044.plot  D0_1996_S3214044.yoda  D0_1996_S3324664.cc  D0_1996_S3324664.info  D0_1996_S3324664.plot  D0_1996_S3324664.yoda  D0_2000_I499943.cc  D0_2000_I499943.info  D0_2000_I499943.plot  D0_2000_I499943.yoda  D0_2000_I503361.cc  D0_2000_I503361.info  D0_2000_I503361.plot  D0_2000_I503361.yoda  D0_2000_S4480767.cc  D0_2000_S4480767.info  D0_2000_S4480767.plot  D0_2000_S4480767.yoda  D0_2001_S4674421.cc  D0_2001_S4674421.info  D0_2001_S4674421.plot  D0_2001_S4674421.yoda  D0_2004_S5992206.cc  D0_2004_S5992206.info  D0_2004_S5992206.plot  D0_2004_S5992206.yoda  D0_2006_S6438750.cc  D0_2006_S6438750.info  D0_2006_S6438750.plot  D0_2006_S6438750.yoda  D0_2007_S7075677.cc  D0_2007_S7075677.info  D0_2007_S7075677.plot  D0_2007_S7075677.yoda  (+60 more)
analyses/pluginHERA/: H1_1994_S2919893.cc  H1_1994_S2919893.info  H1_1994_S2919893.plot  H1_1994_S2919893.yoda  H1_1995_S3167097.cc  H1_1995_S3167097.info  H1_1995_S3167097.plot  (+10 more)
doc/: JHEP3.cls  Makefile.am  Makefile.in  acknowledgements.tex  agilerunmc.tex  bend.eps  compare-histos.txt  cone.eps  gettingstarted.tex  h-physrev3.bst  hepnames.sty  hepnicenames.sty  hepparticles.sty  heppennames.sty  hepunits.sty  intro.tex  make-plots.txt  maybemath.sty  mk-analysis-html  mk-analysis-json  mk-analysis-latex  preamble.tex  refs.bib  rivet-manual.tex  rivetversion.sty.in  slip.eps  thinker.eps  writinganalyses.tex
m4/: lcg.m4  (+1 more)
src/: Makefile.am  Makefile.in
test/: Makefile.am  Makefile.in  testApi.cc  testApi.hepmc  testBeams.cc  testCmdLine.sh  testCmp.cc  testImport.sh  testMatVec.cc  testMath.cc  testNaN.cc
(+869 files in other folders)
