## Internal headers - not to be installed
nobase_dist_noinst_HEADERS =
## Public headers - to be installed
nobase_pkginclude_HEADERS =


## Rivet interface
nobase_pkginclude_HEADERS += \
  Rivet.hh \
  Run.hh \
  Event.hh \
  ParticleBase.hh \
  Particle.fhh Particle.hh \
  Jet.fhh Jet.hh \
  Projection.fhh Projection.hh \
  ProjectionApplier.hh \
  ProjectionHandler.hh \
  Analysis.hh \
  AnalysisHandler.hh \
  AnalysisInfo.hh \
  AnalysisBuilder.hh \
  AnalysisLoader.hh


## Build config stuff
nobase_pkginclude_HEADERS += \
  Config/RivetCommon.hh \
  Config/RivetConfig.hh \
  Config/BuildOptions.hh


## Projections
nobase_pkginclude_HEADERS += \
  Projections/AxesDefinition.hh \
  Projections/Beam.hh \
  Projections/BeamThrust.hh \
  Projections/CentralEtHCM.hh \
  Projections/ChargedFinalState.hh \
  Projections/ChargedLeptons.hh \
  Projections/ConstLossyFinalState.hh \
  Projections/DISFinalState.hh \
  Projections/DISKinematics.hh \
  Projections/DISLepton.hh \
  Projections/DressedLeptons.hh \
  Projections/FastJets.hh \
  Projections/FinalPartons.hh \
  Projections/FinalState.hh \
  Projections/FoxWolframMoments.hh \
  Projections/FParameter.hh \
  Projections/HadronicFinalState.hh \
  Projections/HeavyHadrons.hh \
  Projections/Hemispheres.hh \
  Projections/IdentifiedFinalState.hh \
  Projections/InitialQuarks.hh \
  Projections/InvMassFinalState.hh \
  Projections/JetAlg.hh \
  Projections/JetShape.hh \
  Projections/LeadingParticlesFinalState.hh \
  Projections/LossyFinalState.hh \
  Projections/MergedFinalState.hh \
  Projections/MissingMomentum.hh \
  Projections/NeutralFinalState.hh \
  Projections/NonHadronicFinalState.hh \
  Projections/NonPromptFinalState.hh \
  Projections/ParisiTensor.hh \
  Projections/ParticleFinder.hh \
  Projections/PartonicTops.hh \
  Projections/PrimaryHadrons.hh \
  Projections/PromptFinalState.hh \
  Projections/SmearedParticles.hh \
  Projections/SmearedJets.hh \
  Projections/SmearedMET.hh \
  Projections/Sphericity.hh \
  Projections/Spherocity.hh \
  Projections/TauFinder.hh \
  Projections/Thrust.hh \
  Projections/TriggerCDFRun0Run1.hh \
  Projections/TriggerCDFRun2.hh \
  Projections/TriggerUA5.hh \
  Projections/UnstableFinalState.hh \
  Projections/VetoedFinalState.hh \
  Projections/VisibleFinalState.hh \
  Projections/WFinder.hh \
  Projections/ZFinder.hh
## Meta-projection convenience headers
nobase_pkginclude_HEADERS +=   \
  Projections/FinalStates.hh \
  Projections/Smearing.hh


## Analysis base class headers
# TODO: Move to Rivet/AnalysisTools header dir?
nobase_pkginclude_HEADERS += \
  Analyses/MC_ParticleAnalysis.hh \
  Analyses/MC_JetAnalysis.hh \
  Analyses/MC_JetSplittings.hh


## Tools
nobase_pkginclude_HEADERS += \
  Tools/BeamConstraint.hh \
  Tools/BinnedHistogram.hh \
  Tools/CentralityBinner.hh \
  Tools/Cmp.fhh \
  Tools/Cmp.hh \
  Tools/Cutflow.hh \
  Tools/Cuts.fhh \
  Tools/Cuts.hh \
  Tools/Exceptions.hh \
  Tools/JetUtils.hh \
  Tools/Logging.hh  \
  Tools/Random.hh  \
  Tools/ParticleBaseUtils.hh \
  Tools/ParticleIdUtils.hh \
  Tools/ParticleUtils.hh \
  Tools/ParticleName.hh \
  Tools/PrettyPrint.hh \
  Tools/RivetPaths.hh \
  Tools/RivetSTL.hh \
  Tools/RivetFastJet.hh \
  Tools/RivetHepMC.hh \
  Tools/RivetYODA.hh \
  Tools/RivetMT2.hh \
  Tools/SmearingFunctions.hh \
  Tools/MomentumSmearingFunctions.hh \
  Tools/ParticleSmearingFunctions.hh \
  Tools/JetSmearingFunctions.hh \
  Tools/TypeTraits.hh \
  Tools/Utils.hh
nobase_dist_noinst_HEADERS += \
  Tools/osdir.hh


## Maths
nobase_pkginclude_HEADERS += \
  Math/Matrices.hh \
  Math/Vector3.hh \
  Math/VectorN.hh \
  Math/MatrixN.hh \
  Math/MatrixDiag.hh \
  Math/MathHeader.hh \
  Math/Vectors.hh \
  Math/LorentzTrans.hh \
  Math/Matrix3.hh \
  Math/MathUtils.hh \
  Math/Vector4.hh \
  Math/Math.hh \
  Math/Units.hh \
  Math/Constants.hh \
  Math/eigen/util.h \
  Math/eigen/regressioninternal.h \
  Math/eigen/regression.h \
  Math/eigen/vector.h \
  Math/eigen/ludecompositionbase.h \
  Math/eigen/ludecomposition.h \
  Math/eigen/linearsolver.h \
  Math/eigen/linearsolverbase.h \
  Math/eigen/matrix.h \
  Math/eigen/vectorbase.h \
  Math/eigen/projective.h \
  Math/eigen/matrixbase.h
